9 Sign has Added App Size is reduced next button added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="stop">Stop</string>
     <string name="read_now">Read Now!</string>
     <string name="description">Description</string>
+    <string name="what_s_your_age">What\'s your Age</string>
+    <string name="title">title</string>
 </resources>
