Using Lint:- Code is changed added string resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">Kahani</string>
+
+
     <string name="kahani">KAHANI</string>
     <string name="select">Select</string>
     <string name="speak">Speak</string>
@@ -8,4 +10,9 @@
     <string name="description">Description</string>
     <string name="what_s_your_age">What\'s your Age</string>
     <string name="title">title</string>
+    <string name="speed">Speed</string>
+    <string name="slow">Slow</string>
+    <string name="normal">Normal</string>
+    <string name="fast">Fast</string>
+
 </resources>
